@@ -63,3 +63,4 @@ Version: V0.3B5 Date: Wed Nov 30 15:56:28 2005 +++++++++++++++++++++++++++++++
 + redesign of Command framework finished
 + download URL adjusted
 + allow to download documentation from SourceForge into another directory
++ store user settings under .FreeCAD on Linux platforms
